app.aws.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  EC2SG43CA6:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: The security group for the app.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3005
          CidrIp: 0.0.0.0/0
  EC2LT4OGJE:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateData:
        ImageId: ami-0e92f5873da29c633
        InstanceType: t2.nano
        KeyName: app-key
        SecurityGroups:
          - !Ref EC2SG43CA6
  ELBLB3PP2K:
    Type: "AWS::ElasticLoadBalancing::LoadBalancer"
    Properties:
      AvailabilityZones:
        - us-west-1a
        - us-west-1c
      Listeners:
        - Protocol: HTTP
          InstancePort: 80
          LoadBalancerPort: 80
        - Protocol: HTTPS
          InstancePort: 443
          LoadBalancerPort: 443
          SSLCertificateId: arn:aws:acm:us-west-1:364031193056:certificate/ff4210ca-7625-44f3-a4e6-72d8c5b09d36
  ASASG4CTVJ:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      AutoScalingGroupName: AppAutoScaleGroup
      DesiredCapacity: 2
      MinSize: 2
      MaxSize: 3
      AvailabilityZones:
        - us-west-1a
        - us-west-1c
      LaunchTemplate:
        LaunchTemplateId: !Ref EC2LT4OGJE
        Version: 1
      LoadBalancerNames:
        - !Ref ELBLB3PP2K
# RDS Instances
# Two availability zones us-west-1a and c
# MUST have a security group
